@@ -36,6 +36,7 @@ signalhandler		sqlrservercontroller::alarmhandler;
 volatile sig_atomic_t	sqlrservercontroller::alarmrang=0;
 
 sqlrservercontroller::sqlrservercontroller() : listener() {
+	debug=NULL;
 
 	conn=NULL;
 
