@@ -62,6 +62,8 @@
 	added global temp table tracking for firebird
 	added droptemptables parameter for firebird
 	added globaltemptables parameter for oracle and firebird
+	added padding to mysqlconnection class to deal with alignment issues
+		on Windows
 
 0.58 - updated spawn() calls to detach on windows
 	added support for sqlrelay.conf.d
